# curl

./: .gitignore
allexamples/: CMakeLists.txt
allexamples/10-at-a-time/: 10-at-a-time.c
allexamples/ftpgetinfo/: CMakeLists.txt
allexamples/htmltitle/: CMakeLists.txt
allexamples/multi-event/: CMakeLists.txt
baseCurl/: CMakeLists.txt  main.cpp
curlWithHMI/: CMakeLists.txt  Main.qml  MyButton.qml  README  main.cpp
curlWithHMI/include/: CurlManager.h
curlWithHMI/src/: CurlManager.cpp  main.cpp
testCurl/: CMakeLists.txt
testCurl/include/: CurlManager.h
testCurl/src/: CurlManager.cpp  main.cpp
web/flaskDownload/: app.py  script.sh
web/flaskDownload/templates/: index.html
web/flaskJson/: app.py  curlScript.sh
web/flaskUploads/: app.py
web/flaskUploads/templates/: index.html
web/simple/: index.html
web/simple_css/: app.py  index.html  start.sh  styles.css
