cmake_minimum_required(VERSION 3.0)

project(MyProject)

# 메인 프로젝트 소스 파일

# 도구들의 빌드를 위해 각 도구 디렉토리 추가
add_subdirectory(10-at-a-time)
add_subdirectory(altsvc)
add_subdirectory(anyauthput)
# add_subdirectory(cacertinmem)
add_subdirectory(certinfo)
add_subdirectory(chkspeed)
add_subdirectory(connect-to)
add_subdirectory(cookie_interface)
# add_subdirectory(crawler)
add_subdirectory(debug)
add_subdirectory(default-scheme)
add_subdirectory(ephiperfifo)
# add_subdirectory(evhiperfifo)
add_subdirectory(externalsocket)
add_subdirectory(fileupload)
add_subdirectory(ftp-wildcard)
add_subdirectory(ftpget)
add_subdirectory(ftpgetinfo)
add_subdirectory(ftpgetresp)
add_subdirectory(ftpsget)
add_subdirectory(ftpupload)
add_subdirectory(ftpuploadfrommem)
add_subdirectory(ftpuploadresume)
add_subdirectory(getinfo)
add_subdirectory(getinmemory)
add_subdirectory(getredirect)
add_subdirectory(getreferrer)
# add_subdirectory(ghiper)
add_subdirectory(headerapi)
# add_subdirectory(hiperfifo)
# add_subdirectory(href_extractor)
add_subdirectory(hsts-preload)
# add_subdirectory(htmltidy)
# add_subdirectory(htmltitle)
add_subdirectory(http-options)
add_subdirectory(http-post)
add_subdirectory(http2-download)
add_subdirectory(http2-pushinmemory)
add_subdirectory(http2-serverpush)
add_subdirectory(http2-upload)
add_subdirectory(http3)
add_subdirectory(http3-present)
add_subdirectory(httpcustomheader)
add_subdirectory(httpput)
add_subdirectory(httpput-postfields)
add_subdirectory(https)
add_subdirectory(imap-append)
add_subdirectory(imap-authzid)
add_subdirectory(imap-copy)
add_subdirectory(imap-create)
add_subdirectory(imap-delete)
add_subdirectory(imap-examine)
add_subdirectory(imap-fetch)
add_subdirectory(imap-list)
add_subdirectory(imap-lsub)
add_subdirectory(imap-multi)
add_subdirectory(imap-noop)
add_subdirectory(imap-search)
add_subdirectory(imap-ssl)
add_subdirectory(imap-store)
add_subdirectory(imap-tls)
add_subdirectory(ipv6)
add_subdirectory(maxconnects)
add_subdirectory(multi-app)
add_subdirectory(multi-debugcallback)
add_subdirectory(multi-double)
# add_subdirectory(multi-event)
add_subdirectory(multi-formadd)
add_subdirectory(multi-legacy)
add_subdirectory(multi-post)
add_subdirectory(multi-single)
# add_subdirectory(multi-uv)
add_subdirectory(multithread)
add_subdirectory(parseurl)
add_subdirectory(persistent)
add_subdirectory(pop3-authzid)
add_subdirectory(pop3-dele)
add_subdirectory(pop3-list)
add_subdirectory(pop3-multi)
add_subdirectory(pop3-noop)
add_subdirectory(pop3-retr)
add_subdirectory(pop3-ssl)
add_subdirectory(pop3-stat)
add_subdirectory(pop3-tls)
add_subdirectory(pop3-top)
add_subdirectory(pop3-uidl)
add_subdirectory(post-callback)
add_subdirectory(postinmemory)
add_subdirectory(postit2)
add_subdirectory(postit2-formadd)
add_subdirectory(progressfunc)
add_subdirectory(protofeats)
add_subdirectory(resolve)
add_subdirectory(sendrecv)
add_subdirectory(sepheaders)
# add_subdirectory(sessioninfo)
add_subdirectory(sftpget)
add_subdirectory(sftpuploadresume)
add_subdirectory(shared-connection-cache)
add_subdirectory(simple)
add_subdirectory(simplepost)
add_subdirectory(simplessl)
# add_subdirectory(smooth-gtk-thread)
add_subdirectory(smtp-authzid)
add_subdirectory(smtp-expn)
add_subdirectory(smtp-mail)
# add_subdirectory(smtp-mime)
add_subdirectory(smtp-multi)
add_subdirectory(smtp-ssl)
add_subdirectory(smtp-tls)
add_subdirectory(smtp-vrfy)
add_subdirectory(sslbackend)
# add_subdirectory(synctime)
# add_subdirectory(threaded-ssl)
add_subdirectory(unixsocket)
add_subdirectory(url2file)
add_subdirectory(urlapi)
# add_subdirectory(usercertinmem)
add_subdirectory(websocket)
add_subdirectory(websocket-cb)
# add_subdirectory(xmlstream)
